@@ -27,6 +27,7 @@ import org.englising.com.englisingbe.webclient.service.RecommendApiService;
 import org.englising.com.englisingbe.word.entity.TrackWord;
 import org.englising.com.englisingbe.word.repository.TrackWordRepository;
 import org.englising.com.englisingbe.word.service.TrackWordService;
+import org.englising.com.englisingbe.word.service.WordService;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -45,6 +46,7 @@ public class SinglePlayServiceImpl {
     private final TrackServiceImpl trackService;
     private final UserService userService;
     private final LyricServiceImpl lyricService;
+    private final WordService wordService;
 
     private final SinglePlayRepository singlePlayRepository;
     private final SinglePlayHintRepository singlePlayHintRepository;
@@ -95,7 +97,11 @@ public class SinglePlayServiceImpl {
                 .build();
     }
 
-    public WordCheckResponseDto checkWord(WordCheckRequestDto wordCheckRequestDto){
+    public WordCheckResponseDto checkWord(WordCheckRequestDto wordCheckRequestDto, Long userId){
+        SinglePlayWord originWord = singlePlayWordService.getSinglePlayWordById(wordCheckRequestDto.getSingleplayWordId());
+        if(originWord.getSinglePlay().getUser().getUserId().equals(userId)){
+            throw new GlobalException(ErrorHttpStatus.UNAUTHORIZED_TOKEN);
+        }
         SinglePlayWord singlePlayWord = singlePlayWordService.checkWordAnswer(wordCheckRequestDto);
         RightWordCntDto rightWordCntDto = singlePlayWordService.getRightAndTotalCnt(wordCheckRequestDto.singleplayId);
         return WordCheckResponseDto.builder()
@@ -111,9 +117,12 @@ public class SinglePlayServiceImpl {
                 .build();
     }
 
-    public SinglePlayResponseDto getSinglePlayResult(Long singlePlayId){
+    public SinglePlayResultResponseDto getSinglePlayResult(Long singlePlayId, Long userId){
         // SinglePlay Repository에서 조회
         SinglePlay singlePlay = getSinglePlayById(singlePlayId);
+        if(!singlePlay.getUser().getUserId().equals(userId)){
+            throw new GlobalException(ErrorHttpStatus.UNAUTHORIZED_TOKEN);
+        }
         // 해당 Track의 Lyrics 가져옴
         List<LyricDto> lyricWordSplitted = recommendApiService.getSplittedWordsOfLyricByTrackId(singlePlay.getTrack().getTrackId());
         // SinglePlay-Word 결과 조회
@@ -123,10 +132,10 @@ public class SinglePlayServiceImpl {
         int correctRate = rightWordCnt == 0? 0 : rightWordCnt / totalWordCnt * 100;
         singlePlayRepository.updateScoreAndCorrectRateById(singlePlayId, rightWordCnt, correctRate);
         // Dto 생성
-        return SinglePlayResponseDto.builder()
+        return SinglePlayResultResponseDto.builder()
                 .singlePlayId(singlePlay.getSinglePlayId())
                 .lyrics(getLyricDtoFromLyricList(lyricWordSplitted, singlePlayWordList))
-                .words(getWordDtoFromSinglePlayWord(singlePlayWordList))
+                .words(getWordResultDtoFromSinglePlayWord(singlePlayWordList, userId))
                 .totalWordCnt(totalWordCnt)
                 .rightWordCnt(rightWordCnt)
                 .build();
@@ -146,10 +155,8 @@ public class SinglePlayServiceImpl {
         Page<Track> trackIds = trackService.getSearchTrackIds(keyword, pageable);
         List<TrackAlbumArtistDto> tracks = trackService.getTrackAlbumArtistsByTrackIds(trackIds.getContent()
                 .stream()
-                .map( track -> {
-                            return track.getTrackId();
-                        }
-                ).collect(Collectors.toList()));
+                .map(Track::getTrackId)
+                .toList());
         return getPlayListDtoFromPageAndList(getTrackResponseDtoFromTrackAlbumArtist(userId, tracks),trackIds);
     }
 
@@ -206,7 +213,7 @@ public class SinglePlayServiceImpl {
             }
             int total = 30+40+50;
             int rate = totalScore / total * 100;
-            if(rate < 30){
+            if (rate < 30) {
                 score = 0;
             } else if (rate < 60) {
                 score = 1;
@@ -241,13 +248,27 @@ public class SinglePlayServiceImpl {
     private List<WordResponseDto> getWordDtoFromSinglePlayWord(List<SinglePlayWord> singlePlayWordList){
         return singlePlayWordList.stream()
                 .map(singlePlayWord ->
-                    WordResponseDto.builder()
+                        WordResponseDto.builder()
                             .singleplayWordId(singlePlayWord.getSinglePlayWordId())
                             .sentenceIndex(singlePlayWord.getSentenceIndex())
                             .wordIndex(singlePlayWord.getWordIndex())
                             .word(singlePlayWord.getOriginWord())
                             .isRight(singlePlayWord.getIsRight())
                             .build()
+                ).toList();
+    }
+    private List<WordResultResponseDto> getWordResultDtoFromSinglePlayWord(List<SinglePlayWord> singlePlayWordList, Long userId){
+        return singlePlayWordList.stream()
+                .map(singlePlayWord ->
+                        WordResultResponseDto.builder()
+                                .singleplayWordId(singlePlayWord.getSinglePlayWordId())
+                                .sentenceIndex(singlePlayWord.getSentenceIndex())
+                                .wordIndex(singlePlayWord.getWordIndex())
+                                .word(singlePlayWord.getOriginWord())
+                                .isRight(singlePlayWord.getIsRight())
+                                .wordId(singlePlayWord.getWord().getWordId())
+                                .isLike(wordService.isLikedByUserIdAndWordId(singlePlayWord.getWord().getWordId(), userId))
+                                .build()
                 ).toList();
     }
 
